// proto/driver/v1/driver.proto
syntax = "proto3";
package driver.v1;
import "common/v1/common.proto";
import "google/protobuf/empty.proto";
option go_package = "github.com/lhiradi/ride-handling/proto/driver/v1;driverv1";

message Driver { string id = 1; string name = 2; string phone = 3; string vehicle = 4; }
message SetStatusRequest { string driver_id = 1; string status = 2; } // "online" | "offline"
message HeartbeatRequest { string driver_id = 1; common.v1.GeoPoint location = 2; int64 at_unix_sec = 3; }

service DriverService {
  rpc SetStatus(SetStatusRequest) returns (.google.protobuf.Empty);
  rpc Heartbeat(HeartbeatRequest) returns (.google.protobuf.Empty);
}
